1. fix DataSourceBridge isClosed throw error. 2. console/boot remove mysql dependence. 3. next version is 3.0.8